Optimize for fonts, css.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 TYPOGRAPHY
 ================================*/
 body {
-    font-family: 'Raleway', 'MS Gothic', 'Microsoft Yahei', 'Microsoft Jhenghei', sans-serif;
+    font-family: 'Open Sans', 'Noto Sans JP', 'Noto Sans TC', 'Noto Sans SC', 'Noto Sans KR', sans-serif;
     line-height: 1.8em;
 }
 
