--- a/css/after.css
+++ b/css/after.css
@@ -1,4 +1,5 @@
 .after-button {
+	font-family: 'FontAwesome', 'Open Sans', 'Noto Sans JP', 'Noto Sans TC', 'Noto Sans SC', 'Noto Sans KR', sans-serif;
 	border-radius: 8px;
 	background-color: white;
 	border: none;
